<resources>
    <string name="app_name">CP-670 (English)</string>
    <string name="hello_message">Hello!</string>
    <string name="ButtonText">I\’m a button</string>
    <string name="LoginText">Login</string>
    <string name="LoginName">Login Name</string>
    <string name="Password">Password</string>
    <string name="NextPage">Next Page</string>
    <string name="PreviousPage">Previous Page</string>
    <string name="Home">Home</string>
    <string name="Switch1Text"> What does this do?</string>
...
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="listActivityExitResponse">Exited to Main Activity</string>
    <string name="iambuttonDebug">You have entered List Activity Page</string>
    <string name="switchOn">Switch is On</string>
    <string name="switchOff">Switch is Off</string>
    <string name="startChatBtn">Start Chat</string>
    <string name="send">Send</string>
    <string name="editTextChat">Type your message</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
...
