...
        android:theme="?attr/actionBarTheme" />

    <ListView
        android:id="@+id/chatListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/sendButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="65dp"
...
        android:layout_marginBottom="5dp"
        android:divider="@android:color/darker_gray"
        android:dividerHeight="0.5dp"
        android:padding="8dp" />

    <EditText
        android:id="@+id/messageEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="0dp"
...
