...
        android:layout_weight="0"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="20dp"
        android:text="@string/Password" />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button7"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        style="@style/ButtonStyle"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="20dp"
        android:layout_weight="0"
...
